src/less/segmented-buttons/segmented-buttons.less
@import "../variables/variables.less";
@import "../mixins/private/button-mixins.less";

@segmented-buttons-padding: @spacing-50;

.segmented-buttons {
    border: 1px solid var(--color-stroke-default);
    border-radius: var(
        --segmented-button-border-radius,
        calc(@button-height-large / 2)
    );
    max-width: 720px;
    min-width: 215px;
    padding: @segmented-buttons-padding;
}

.segmented-buttons > ul {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
}

.segmented-buttons > ul > li {
    display: flex;
    flex: 1;
}

.segmented-buttons > ul > li:not(:first-child) {
    margin-left: @spacing-100;
}

.segmented-buttons__button {
    background-color: transparent;
    border: none;
    border-radius: var(--btn-border-radius, calc(@button-height-regular / 2));
    font-size: @font-size-regular;
    min-height: @button-height-regular - (@segmented-buttons-padding * 2);
    padding: @spacing-100 @spacing-200;
    width: 100%;
}

.segmented-buttons--large .segmented-buttons__button {
    min-height: @button-height-large - (@segmented-buttons-padding * 2);
}

.segmented-buttons__button-cell {
    .btn-cell-base();

    justify-content: center;
}

.segmented-buttons__button svg.icon {
    .btn-icon-base();
}

.segmented-buttons__button[aria-current] {
    background-color: var(--color-foreground-primary);
    color: var(--color-foreground-on-inverse);
}

.segmented-buttons__button:not([aria-current]) {
    &:active {
        background-color: var(--color-state-primary-active);
    }

    &:hover,
    &:focus {
        background-color: var(--color-state-primary-hover);
    }
}

[dir="rtl"] {
    .segmented-buttons > ul > li:not(:first-child) {
        margin-left: 0;
        margin-right: @spacing-100;
    }
}

